--- a/src/main/features/response/views/statement-of-means/monthly-expenses.njk
+++ b/src/main/features/response/views/statement-of-means/monthly-expenses.njk
@@ -39,7 +39,7 @@
 <div class="grid-row">
   <div class="column-two-thirds">
 
-    <form method="post" novalidate>
+    <form method="post" novalidate class="income-expense-calculation">
       {{ csrfProtection(csrf) }}
 
       <p>{{ t('Select all that apply. The information you enter must be truthful and accurate.') }}</p>
