--- a/src/main/features/claim/views/resolving-this-dispute.njk
+++ b/src/main/features/claim/views/resolving-this-dispute.njk
@@ -23,7 +23,7 @@
       <ul class="list list-bullet">
         <li>{{ t('telling them why you intend to claim against them') }}</li>
         <li>{{ t('suggesting a timetable with actions you want them to take') }}</li>
-        <li>{{ t('explaining you’ll make a claim against them if they don‘t follow your timetable') }}</li>
+        <li>{{ t('explaining you’ll make a claim against them if they don’t follow your timetable') }}</li>
       </ul>
 
       <h2 class="heading-medium">{{ t('Consider mediation') }}</h2>
