ROC-3912: update task list and free mediation page

--- a/src/main/features/response/views/free-mediation.njk
+++ b/src/main/features/response/views/free-mediation.njk
@@ -7,7 +7,13 @@
   <div class="grid-row">
     <div class="column-two-thirds">
 
-      <p>{{ t('Many people resolve their dispute without a hearing by taking part in telephone mediation.') }}</p>
+      {% if amount %}
+        <p>{{ t('If {{ claimantFullName }} rejects your admission of {{ amount }} you can try to resolve this dispute using telephone mediation.',
+        { claimantFullName : claimantFullName, amount: amount | numeral }) }}</p>
+        <p>{{ t('If you succeed, you won’t have to go to a hearing.') }}</p>
+      {% else %}
+        <p>{{ t('Many people resolve their dispute without a hearing by taking part in telephone mediation.') }}</p>
+      {% endif %}
 
       <p>{{ t('A mediator will:') }}</p>
 
