--- a/src/main/features/response/views/task-list.njk
+++ b/src/main/features/response/views/task-list.njk
@@ -24,6 +24,16 @@
         {% endfor %}
       </div>
 
+      {% if resolvingClaimSection %}
+        <div class="task-group">
+          {{ taskListHeading(resolvingClaimSection.position, t(resolvingClaimSection.name)) }}
+
+          {% for item in resolvingClaimSection.tasks %}
+            {{ task(item.startPageUrl, t(item.name), item.completed) }}
+          {% endfor %}
+        </div>
+      {% endif %}
+
       {% if submitSection %}
         <div class="task-group">
           {{ taskListHeading(submitSection.position, t(submitSection.name)) }}
