WIP other income js enabled

--- a/src/main/features/response/views/statement-of-means/monthly-income.njk
+++ b/src/main/features/response/views/statement-of-means/monthly-income.njk
@@ -5,6 +5,7 @@
 {% block additional_scripts %}
   {% include "expandable-checkbox-option-scripts.njk" %}
   {% include "income-expense-calculation-scripts.njk" %}
+  {% include "append-income-source-section.njk" %}
 {% endblock %}
 
 {% set heading = 'What regular income do you receive?' %}
