--- a/src/main/features/response/views/statement-of-means/explanation.njk
+++ b/src/main/features/response/views/statement-of-means/explanation.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, saveAndContinueButton, errorSummary, textArea %}
 
-{% set heading = 'Briefly explain why you can`t pay immediately' %}
+{% set heading = 'Briefly explain why you can’t pay immediately' %}
 
 {% block content %}
   <div class="grid-row">
