--- a/src/main/features/response/views/confirmation/part-admission.njk
+++ b/src/main/features/response/views/confirmation/part-admission.njk
@@ -1,13 +1,15 @@
 {% set claimantName = claim.claimData.claimant.name %}
 {% set claimantDetailsPageURI = ClaimPaths.claimantDetailsPage.evaluateUri({ externalId: claim.externalId }) %}
 {% set amount = claim.response.paymentDetails.amount| numeral %}
-{% set paymentDate = claim.response.paymentDate | date %}
 
 {% if claim.response['isAlreadyPaid'] === 'yes' %}
-<p> {{ t('You told us you’ve paid the {{ amount }} you believe you owe. We’ve sent {{ claimantName }} this response.', { claimantName: claimantName, amount: amount }) }}</p>
+  <p> {{ t('You told us you’ve paid the {{ amount }} you believe you owe. We’ve sent {{ claimantName }} this response.', { claimantName: claimantName, amount: amount }) }}</p>
 {% endif %}
 
 {% if claim.response.paymentOption %}
+  {% if claim.response.paymentDate %}
+    {% set paymentDate = claim.response.paymentDate | date %}
+  {% endif %}
   {% if claim.response.paymentOption === domain.PaymentOption.IMMEDIATELY %}
     {% set paymentMethod = 'immediately' %}
   {% elseif claim.response.paymentOption === domain.PaymentOption.FULL_BY_SPECIFIED_DATE %}
