Add route tests

--- a/src/main/features/claimant-response/views/incomplete-submission.njk
+++ b/src/main/features/claimant-response/views/incomplete-submission.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 {% from "remainingTasksFragment.njk" import remainingTasksFragment  %}
 
-{% set heading = 'You need to complete all sections before you submit your claim' %}
+{% set heading = 'You need to complete all sections before you submit your response' %}
 
 {% block content %}
 
