--- a/src/main/features/response/views/statement-of-means/monthly-expenses.njk
+++ b/src/main/features/response/views/statement-of-means/monthly-expenses.njk
@@ -88,7 +88,7 @@
     {% for source in form.model.other %}
       <div class="other-income-expense-source">
         {{ incomeExpenseSource(form = form, name = name + '[' + loop.index0 + ']', amountLabel = 'Amount paid', amountHint = hint, scheduleLabel = 'Received every', nameEditable = true) }}
-        {% if form.model.otherSources.length > 1 %}
+        {% if form.model.other.length > 1 %}
           {{ linkButton(name = 'action[removeOther][otherSources.' + loop.index0 + ']', label = 'Remove this expense source', class = 'link-button') }}
         {% else %}
           {{ linkButton(name = 'action[reset][' + name + '.0]', label = 'Reset this expense source', class = 'link-button js-hidden') }}
