--- a/src/main/features/response/views/statement-of-means/monthly-expenses.njk
+++ b/src/main/features/response/views/statement-of-means/monthly-expenses.njk
@@ -57,7 +57,7 @@
       {{ expenseSource(form, name = 'hirePurchase', label = 'Hire purchase') }}
       {{ expenseSource(form, name = 'mobilePhone', label = 'Mobile phone') }}
       {{ expenseSource(form, name = 'maintenance', label = 'Maintenance payments') }}
-      {{ expenseSources(form, name = 'otherSources', label = 'Other') }}
+      {{ expenseSources(form, name = 'other', label = 'Other') }}
 
       {{ linkButton('Recalculate total monthly expenditure', 'action[calculateMonthlyIncome]', 'button button-secondary calculate-monthly-income-expense') }}
 
@@ -89,7 +89,7 @@
       <div class="other-income-expense-source">
         {{ incomeExpenseSource(form = form, name = name + '[' + loop.index0 + ']', amountLabel = 'Amount paid', amountHint = hint, scheduleLabel = 'Paid every', nameEditable = true) }}
         {% if form.model.other.length > 1 %}
-          {{ linkButton(name = 'action[removeOther][otherSources.' + loop.index0 + ']', label = 'Remove this expense source', class = 'link-button') }}
+          {{ linkButton(name = 'action[removeOther][other.' + loop.index0 + ']', label = 'Remove this expense source', class = 'link-button') }}
         {% else %}
           {{ linkButton(name = 'action[reset][' + name + '.0]', label = 'Reset this expense source', class = 'link-button js-hidden') }}
         {% endif %}
