ROC-3859 JS expenses

--- a/src/main/features/response/views/statement-of-means/monthly-expenses.njk
+++ b/src/main/features/response/views/statement-of-means/monthly-expenses.njk
@@ -6,7 +6,7 @@
 
 {% block additional_scripts %}
   {% include "expandable-checkbox-option-scripts.njk" %}
-  {% include "income-expense-calculation-scripts.njk" %}
+  {% include "income-expense-scripts.njk" %}
 {% endblock %}
 
 {% macro expenseRow(index, form) %}
